[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Cristiano Coutinho <coutinho.cristiano@gmail.com>"]
readme = "README.md"

packages = [{include = "notas_musicais"}]
[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
mkdocs-material = "^9.5.39"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

profile = "black"
[tool.isort]
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "test lint"
test = "pytest -s -x --cov=notas_musicais -vv"
pos_test = "coverage html"
testall = "task lint & task test & task pos_test"
